--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
     <body>
-        <header></header>
-        <h1>Git</h1>
+        <header>
+            <h1>Git</h1>
+        </header>
     </body>
 </html>
