원격저장소

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
             <li>branch</li>
             <li>브랜치</li>
             <li>충돌</li>
+            <li>원격 저장소</li>
         </ul>
     </body>
 </html>
