--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             <li>충돌</li>
             <li>원격 저장소</li>
             <li>충돌해결</li>
+            <li>push</li>
         </ul>
     </body>
 </html>
