--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             <li>원격 저장소</li>
             <li>충돌해결</li>
             <li>push</li>
+            <li>pull</li>
         </ul>
     </body>
 </html>
