--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         </header>
         <ul>
             <li>push.zest133_3</li>
-            <li>Git intro</li>
+            <li>Git intro 22</li>
             <li>버전??? ???</li>
             <li>branch</li>
             <li>브랜치</li>
