--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
             <li>push.clone2</li>
             <li>push.zest133_2</li>
             <li>push.clone3</li>
+            <li>stash</li>
         </ul>
     </body>
 </html>
