--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
             <li>push.zest133_2</li>
             <li>push.clone3</li>
             <li>stash</li>
+            <li>ignore</li>
         </ul>
     </body>
 </html>
